--- a/Server/.env
+++ b/Server/.env
@@ -1,3 +1,8 @@
 PORT=5000
 URI=mongodb+srv://22cse519suprateeksen:FAgUazZ0a0rsKH2s@cluster0.74tsftz.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET="MYSECRETKEY"
+
+
+CLOUDINARY_CLOUD_NAME=djmyx0k0y
+CLOUDINARY_API_KEY=693815531969449
+CLOUDINARY_API_SECRET=eluux1i5HCsAM_mv2WgyvFhfUno
