--- a/Server/.env
+++ b/Server/.env
@@ -6,3 +6,6 @@ JWT_SECRET="MYSECRETKEY"
 CLOUDINARY_CLOUD_NAME=djmyx0k0y
 CLOUDINARY_API_KEY=693815531969449
 CLOUDINARY_API_SECRET=eluux1i5HCsAM_mv2WgyvFhfUno
+
+
+NAME=PIKUN
